# HelloAgent

./: .gitignore  CODE_UNDERSTANDING_AGENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PLANNING_AGENT_GUIDE.md  QUICKSTART_CODE_AGENT.md  README.md  user_info.json
ai_chat/: MANIFEST.in  README.md  README_FUNCTION_CALL.md  README_REACT.md  app.py  multi_agent_example.py  pyproject.toml  requirements.txt  run_server.py  setup.py
ai_chat/backend/: app.py  config.py  requirements.txt
ai_chat/backend/agents/: __init__.py  agent_manager.py  base_agent.py  code_understanding_agent.py  documentation_agent.py  function_call_agent.py  memory.py  memory_function_call_agent.py  memory_mixin.py  planning_agent.py  specialized_agents.py
ai_chat/backend/chat/: function_call_processor.py  processor.py  session.py
ai_chat/backend/llm/: client.py
ai_chat/backend/tools/: __init__.py  base.py  code_analysis.py  file_operations.py  registry.py  terminal.py  web_scraper.py
ai_chat/frontend/: index.html  script.js  style.css  style.css.backup  styles.css
ai_chat/frontend/css/: code-blocks.css  layout.css  markdown.css  messages.css  responsive.css  todo-list.css
ai_chat/frontend/js/: message-handler.js  todo-handler.js  websocket-handler.js
ai_chat/src/: README.md  __init__.py
ai_chat/src/agents/: __init__.py  agent_manager.py  base_agent.py  code_understanding_agent.py  documentation_agent.py  function_call_agent.py  memory.py  memory_function_call_agent.py  planning_agent.py  specialized_agents.py
ai_chat/src/chat/: function_call_processor.py  processor.py  react_processor.py  (+1 more)
(+68 files in other folders)
